--- a/Assets/Script/Game/Loli War/UI/View/Button.xml
+++ b/Assets/Script/Game/Loli War/UI/View/Button.xml
@@ -2,12 +2,11 @@
 	<Sprite Name="up" X="{ $X }" Y="{ $Y }" File="{ 'Image/items.clip|'..imageUp }"/>
 	<Sprite Name="down" X="{ $X }" Y="{ $Y }" File="{ 'Image/items.clip|'..imageDown }" Visible="False"/>
 	<Action>
-		<Hide Name="hide"/>
-		<Show Name="show"/>
+		<Hide Name="hide" Def="True"/>
+		<Show Name="show" Def="True"/>
 	</Action>
 	<Slot Name="TapBegan" Target="up" Perform="hide"/>
 	<Slot Name="TapBegan" Target="down" Perform="show"/>
 	<Slot Name="TapEnded" Target="up" Perform="show"/>
 	<Slot Name="TapEnded" Target="down" Perform="hide"/>
 </Node>
-
