--- a/Assets/Script/Game/Loli War/UI/View/EPHint.xml
+++ b/Assets/Script/Game/Loli War/UI/View/EPHint.xml
@@ -1,4 +1,4 @@
-<Node Name="hint" X="{ 55+(index-1)*25 }" Visible="False">
+<Node X="{ 55+(index-1)*25 }" Visible="False">
 	<Sprite File="{ 'Image/misc.clip|'..clip }" AnchorX="0"/>
 	<Action>
 		<Sequence Name="show">
@@ -13,7 +13,7 @@
 			<Delay Time="0.8"/>
 			<Opacity Time="0.3" Start="1" Stop="0"/>
 			<Hide/>
-			<Call>hint:emit("DisplayEnd",hint)</Call>
+			<Emit Event="DisplayEnd"/>
 		</Sequence>
 	</Action>
 	<Slot Name="Enter" Perform="show"/>
